stop headers from wrapping to an orphaned child

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,6 +58,7 @@ h6,
 h1,
 .h1 {
   @apply fs-1;
+  text-wrap: pretty;
 }
 h2,
 .h2 {
